# Curvature-Lead-Lag-Model

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: CURVATURE_IMPLICATIONS.md  ICAIF_PAPER.md  PLAN.md  REPORT.md  TALK_SCRIPT.md
logs/: orchestrator_findings.md
scripts/: make_slides.py  pull_eps.py  pull_smallcap.py  pull_taq.py  pull_taq_years.py  pull_wrds.py  run_curvature_vol.py  run_daily_walkforward.py  run_diversification.py  run_eps_test.py  run_four_objects.py  run_intraday.py  run_link_momentum.py  run_more_experiments.py  run_more_experiments2.py  run_orchestrator.py  run_other_indicators.py  run_real.py  run_regime_preview.py  run_sandhu_extension.py  run_shock_spillover.py  run_smallcap_retest.py  run_structural_alpha.py  run_supplychain.py  run_supplychain2.py  run_supplychain_clean.py  run_synthetic.py  run_vix_test.py  run_wrds.py
slides/: Ricci_Curvature_LeadLag.pptx
src/cllm/: __init__.py  curvature.py  diagnostics.py  evaluation.py  linegraph.py  network.py  orchestrator.py  pipeline.py  residualize.py  synthetic.py  validation.py
src/cllm/agent/: __init__.py  orchestrator.py
src/cllm/data/: __init__.py  loaders.py
tests/: test_curvature.py  test_diagnostics.py  test_evaluation.py  test_linegraph.py  test_network.py  test_orchestrator.py  test_pipeline.py  test_residualize.py  test_smoke.py  test_synthetic.py  test_validation.py
